--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                     <img src="images/author-1.png" alt="Blog Author">
                                     <span>آیهان قلی زاده</span>
                                 </a>
-                                <a class="blog-category" href="#">سفر - سفر مجازی</a>
+                                <a class="blog-category" href="https://ayhanblog.github.io/option-travel">سفر - سفر مجازی</a>
                             </div>
                             <div class="blog-text">
                                 <div class= "logo"><a>سفر مجازی به شهر زیبای پاریس</a></div>
@@ -112,9 +112,9 @@
                                     <ul>
                                         <li><a href="#">تیزهوشان</a></li>
                                         <li><a href="#">هوش ریاضی</a></li>
-                                        <li><a href="#">سفر</a></li>
+                                        <li><a href="https://ayhanblog.github.io/option-travel">سفر</a></li>
                                         <li><a href="#">عدالت آموزشی</a></li>
-                                        <li><a href="#">سفر مجازی</a></li>
+                                        <li><a href="https://ayhanblog.github.io/option-travel">سفر مجازی</a></li>
                                     </ul>
                                 </div>
                             </div>
